some fix and refactor, added test